--- a/package.json
+++ b/package.json
@@ -1,70 +1,20 @@
 {
-  "name": "angular2-full-stack",
-  "version": "3.4.0-rc.1",
-  "license": "MIT",
-  "author": "Davide Violante",
-  "description": "Angular 2 full stack project.",
-  "angular-cli": {},
-  "scripts": {
-    "ng": "ng",
-    "build": "ng build",
-    "start": "concurrently \"mongod\" \"ng build -w\" \"nodemon src/server/app.js\"",
-    "prod": "concurrently \"mongod\" \"ng build -aot -prod\" \"node src/server/app.js\"",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
+  "name": "nodeapp",
+  "version": "0.0.0",
   "private": true,
-  "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@types/html2canvas": "0.5.32",
-    "body-parser": "1.16.1",
-    "bootstrap": "4.0.0-alpha.5",
-    "core-js": "^2.4.1",
-    "express": "4.14.1",
-    "font-awesome": "4.7.0",
-    "hammerjs": "^2.0.8",
-    "html2canvas": "0.5.0-beta4",
-    "jquery": "3.1.1",
-    "mongoose": "4.9.0",
-    "morgan": "1.8.1",
-    "ng2-adal": "^0.3.0",
-    "ng2-file-upload": "^1.2.0",
-    "rxjs": "^5.2.0",
-    "tether": "1.4.0",
-    "web-animations-js": "^2.2.2",
-    "zone.js": "^0.8.5"
+  "scripts": {
+    "start": "node app.js"
   },
-  "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.4.2",
-    "typescript": "~2.1.0",
-    "concurrently": "^3.3.0",
-    "nodemon": "1.11.0"
+  "dependencies": {
+    "body-parser": "~1.16.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.0",
+    "express": "~4.14.1",
+    "fs": "0.0.2",
+    "jade": "~1.11.0",
+    "mongoose": "^4.9.3",
+    "morgan": "~1.7.0",
+    "multer": "1.1.0",
+    "serve-favicon": "~2.3.2"
   }
 }
